package main

import (
	"os"
	"strconv"
	"testing"
	"time"
)

func TestMainFlagDefaults(t *testing.T) {
	// Test that flags can be initialized without panicking
	oldArgs := os.Args
	defer func() { os.Args = oldArgs }()

	// Simulate command line args with defaults
	os.Args = []string{"mq-service",
		"-grpc-port=9091",
		"-http-port=9090",
		"-persistence=true",
		"-persistence-dir=./mq-data",
		"-ack-timeout=30s",
		"-max-retries=3"}

	// Test flag parsing doesn't panic
	defer func() {
		if r := recover(); r != nil {
			t.Errorf("Flag initialization panicked: %v", r)
		}
	}()
}

func TestPortValidation(t *testing.T) {
	tests := []struct {
		name  string
		port  string
		valid bool
	}{
		{"valid_port_9091", "9091", true},
		{"valid_port_8080", "8080", true},
		{"valid_port_1", "1", true},
		{"valid_port_65535", "65535", true},
		{"invalid_port_0", "0", false},
		{"invalid_port_negative", "-1", false},
		{"invalid_port_too_high", "65536", false},
		{"invalid_port_text", "abc", false},
		{"invalid_port_empty", "", false},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			portNum, err := strconv.Atoi(tt.port)
			isValid := err == nil && portNum >= 1 && portNum <= 65535

			if isValid != tt.valid {
				t.Errorf("Port validation for %s: got %v, want %v", tt.port, isValid, tt.valid)
			}
		})
	}
}

func TestBrokerConfigurationDefaults(t *testing.T) {
	// Test default broker configuration values
	tests := []struct {
		name               string
		persistenceEnabled bool
		persistenceDir     string
		ackTimeout         time.Duration
		maxRetries         int
	}{
		{
			name:               "default_config",
			persistenceEnabled: true,
			persistenceDir:     "./mq-data",
			ackTimeout:         30 * time.Second,
			maxRetries:         3,
		},
		{
			name:               "custom_config",
			persistenceEnabled: false,
			persistenceDir:     "/tmp/custom-mq",
			ackTimeout:         60 * time.Second,
			maxRetries:         5,
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// Test that configuration values are reasonable
			if tt.persistenceDir == "" {
				t.Error("Persistence directory should not be empty")
			}
			if tt.ackTimeout <= 0 {
				t.Error("Ack timeout should be positive")
			}
			if tt.maxRetries < 0 {
				t.Error("Max retries should not be negative")
			}
		})
	}
}

func TestServiceTypes(t *testing.T) {
	// Test that service types can be instantiated
	t.Run("grpc_service_type", func(t *testing.T) {
		// Test gRPCMQService type definition
		// This is mainly a compilation test
		if testing.Verbose() {
			t.Log("Testing gRPCMQService type")
		}
	})

	t.Run("http_service_type", func(t *testing.T) {
		// Test HTTPMQService type definition
		// This is mainly a compilation test
		if testing.Verbose() {
			t.Log("Testing HTTPMQService type")
		}
	})
}

func TestEnvironmentConfiguration(t *testing.T) {
	tests := []struct {
		name    string
		envVars map[string]string
	}{
		{
			name: "logger_config",
			envVars: map[string]string{
				"LOG_LEVEL":      "INFO",
				"LOG_FORMAT":     "json",
				"LOG_ADD_SOURCE": "true",
			},
		},
		{
			name: "debug_config",
			envVars: map[string]string{
				"LOG_LEVEL":      "DEBUG",
				"LOG_FORMAT":     "text",
				"LOG_ADD_SOURCE": "false",
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// Set environment variables
			for key, value := range tt.envVars {
				_ = os.Setenv(key, value)
			}

			// Clean up after test
			defer func() {
				for key := range tt.envVars {
					_ = os.Unsetenv(key)
				}
			}()

			// Test environment setup
			for key, expectedValue := range tt.envVars {
				actualValue := os.Getenv(key)
				if actualValue != expectedValue {
					t.Errorf("Environment variable %s: got %s, want %s", key, actualValue, expectedValue)
				}
			}
		})
	}
}

func TestCORSHeaders(t *testing.T) {
	// Test CORS header constants that are used in HTTP handlers
	expectedHeaders := map[string]string{
		"Access-Control-Allow-Origin":  "*",
		"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
		"Access-Control-Allow-Headers": "Content-Type, Authorization",
	}

	for header, value := range expectedHeaders {
		t.Run("header_"+header, func(t *testing.T) {
			if value == "" {
				t.Errorf("CORS header %s should not be empty", header)
			}
		})
	}
}

func TestHTTPEndpoints(t *testing.T) {
	// Test HTTP endpoint patterns
	endpoints := []struct {
		pattern string
		methods []string
	}{
		{"/publish/{topic}", []string{"POST", "OPTIONS"}},
		{"/health", []string{"GET", "OPTIONS"}},
		{"/stats", []string{"GET", "OPTIONS"}},
	}

	for _, endpoint := range endpoints {
		t.Run("endpoint_"+endpoint.pattern, func(t *testing.T) {
			if endpoint.pattern == "" {
				t.Error("Endpoint pattern should not be empty")
			}
			if len(endpoint.methods) == 0 {
				t.Error("Endpoint should have at least one method")
			}

			// Check that OPTIONS is included for CORS
			hasOptions := false
			for _, method := range endpoint.methods {
				if method == "OPTIONS" {
					hasOptions = true
					break
				}
			}
			if !hasOptions {
				t.Errorf("Endpoint %s should support OPTIONS method for CORS", endpoint.pattern)
			}
		})
	}
}

func TestGRPCMethods(t *testing.T) {
	// Test gRPC method definitions
	methods := []string{
		"Publish",
		"Subscribe",
		"Health",
		"GetStats",
	}

	for _, method := range methods {
		t.Run("grpc_method_"+method, func(t *testing.T) {
			if method == "" {
				t.Error("gRPC method name should not be empty")
			}
		})
	}
}

func TestMessageIDGeneration(t *testing.T) {
	// Test message ID generation logic
	t.Run("message_id_format", func(t *testing.T) {
		// Test that message ID can be generated using timestamp
		messageID := strconv.FormatInt(time.Now().UnixNano(), 10)

		if messageID == "" {
			t.Error("Message ID should not be empty")
		}
		if len(messageID) < 10 {
			t.Error("Message ID should be reasonably long")
		}
	})
}

func TestTimeouts(t *testing.T) {
	// Test timeout configurations
	timeouts := map[string]time.Duration{
		"read_header": 10 * time.Second,
		"read":        30 * time.Second,
		"write":       30 * time.Second,
		"idle":        60 * time.Second,
		"shutdown":    5 * time.Second,
	}

	for name, timeout := range timeouts {
		t.Run("timeout_"+name, func(t *testing.T) {
			if timeout <= 0 {
				t.Errorf("Timeout %s should be positive, got %v", name, timeout)
			}
		})
	}
}

func TestJSONResponse(t *testing.T) {
	// Test JSON response structures
	t.Run("publish_response", func(t *testing.T) {
		response := map[string]string{
			"status":     "published",
			"topic":      "test-topic",
			"message_id": "123456789",
		}

		for key, value := range response {
			if value == "" {
				t.Errorf("Response field %s should not be empty", key)
			}
		}
	})

	t.Run("health_response", func(t *testing.T) {
		response := map[string]interface{}{
			"status":    "healthy",
			"service":   "mq-service",
			"timestamp": time.Now().UTC(),
		}

		if response["status"] != "healthy" {
			t.Error("Health status should be 'healthy'")
		}
		if response["service"] != "mq-service" {
			t.Error("Service name should be 'mq-service'")
		}
	})
}

func TestSignalHandling(t *testing.T) {
	// Test signal handling setup
	t.Run("signal_channel", func(t *testing.T) {
		sigCh := make(chan os.Signal, 1)
		// Verify channel capacity instead of nil check (make() never returns nil)
		if cap(sigCh) != 1 {
			t.Error("Signal channel should have capacity of 1")
		}

		// Test channel capacity
		if cap(sigCh) != 1 {
			t.Error("Signal channel should have capacity of 1")
		}
	})
}

func TestImports(t *testing.T) {
	// Test that all required imports are available
	imports := []string{
		"context",
		"encoding/json",
		"flag",
		"fmt",
		"io",
		"net",
		"net/http",
		"os",
		"os/signal",
		"strconv",
		"syscall",
		"time",
		"github.com/gorilla/mux",
		"github.com/harishb93/telemetry-pipeline/internal/logger",
		"github.com/harishb93/telemetry-pipeline/internal/mq",
	}

	for _, imp := range imports {
		t.Run("import_"+imp, func(t *testing.T) {
			// Test passes if the import is available (compilation test)
			if testing.Verbose() {
				t.Logf("Testing import: %s", imp)
			}
		})
	}
}

func TestServerConfiguration(t *testing.T) {
	// Test HTTP server configuration
	t.Run("server_timeouts", func(t *testing.T) {
		config := struct {
			readHeaderTimeout time.Duration
			readTimeout       time.Duration
			writeTimeout      time.Duration
			idleTimeout       time.Duration
		}{
			readHeaderTimeout: 10 * time.Second,
			readTimeout:       30 * time.Second,
			writeTimeout:      30 * time.Second,
			idleTimeout:       60 * time.Second,
		}

		if config.readHeaderTimeout <= 0 {
			t.Error("Read header timeout should be positive")
		}
		if config.readTimeout <= 0 {
			t.Error("Read timeout should be positive")
		}
		if config.writeTimeout <= 0 {
			t.Error("Write timeout should be positive")
		}
		if config.idleTimeout <= 0 {
			t.Error("Idle timeout should be positive")
		}
	})
}
